--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-plugin-macros": "^3.1.0",
     "framer-motion": "^10.16.5",
     "gsap": "^3.12.4",
+    "hamburger-react": "^2.5.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
