--- a/portafolio-tailwindcss/package.json
+++ b/portafolio-tailwindcss/package.json
@@ -13,6 +13,7 @@
     "@supabase/supabase-js": "^2.90.1",
     "framer-motion": "^12.0.6",
     "hamburger-react": "^2.5.2",
+    "html-to-image": "^1.11.13",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
