installed prism y react syntax higlighter for highlighting the code of the posts but didnt implement it and removed an unnecesary import

--- a/portafolio-tailwindcss/package.json
+++ b/portafolio-tailwindcss/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^12.0.6",
     "hamburger-react": "^2.5.2",
     "html-to-image": "^1.11.13",
+    "prismjs": "^1.30.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -26,6 +27,7 @@
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.1.5",
     "react-simple-typewriter": "^5.0.1",
+    "react-syntax-highlighter": "^16.1.0",
     "styled-components": "^6.1.19"
   },
   "devDependencies": {
