installed various packages for highlighting the posts markdown

--- a/portafolio-tailwindcss/package.json
+++ b/portafolio-tailwindcss/package.json
@@ -28,6 +28,8 @@
     "react-router-dom": "^7.1.5",
     "react-simple-typewriter": "^5.0.1",
     "react-syntax-highlighter": "^16.1.0",
+    "rehype-highlight": "^7.0.2",
+    "remark-gfm": "^4.0.1",
     "styled-components": "^6.1.19"
   },
   "devDependencies": {
