--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^12.0.6",
     "hamburger-react": "^2.5.2",
     "html-to-image": "^1.11.13",
+    "motion": "^12.29.2",
     "prismjs": "^1.30.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
